@@ -68,7 +68,10 @@ public final class PstRegulation {
     private PstRegulation() {
     }
 
-    public static RaoResult regulatePsts(Network network, Crac crac, RaoResult raoResult, RaoParameters raoParameters) {
+    public static RaoResult regulatePsts(Network network,
+                                         Crac crac,
+                                         RaoResult raoResult,
+                                         RaoParameters raoParameters) {
         Map<String, String> pstsToRegulate = SearchTreeRaoPstRegulationParameters.getPstsToRegulate(raoParameters);
         if (pstsToRegulate.isEmpty()) {
             return raoResult;
@@ -84,9 +87,20 @@ public final class PstRegulation {
             return raoResult;
         }
 
-        Set<Contingency> contingencies = statesToRegulate.stream().map(PstRegulationInput::curativeState).map(State::getContingency).filter(Optional::isPresent).map(Optional::get).collect(Collectors.toSet());
-        BUSINESS_LOGS.info("{} contingency scenario(s) to regulate: {}", contingencies.size(), String.join(", ", contingencies.stream().map(contingency -> contingency.getName().orElse(contingency.getId())).sorted().toList()));
-        BUSINESS_LOGS.info("{} PST(s) to regulate: {}", rangeActionsToRegulate.size(), String.join(", ", rangeActionsToRegulate.stream().map(PstRangeAction::getName).sorted().toList()));
+        Set<Contingency> contingencies = statesToRegulate.stream()
+            .map(PstRegulationInput::curativeState)
+            .map(State::getContingency)
+            .filter(Optional::isPresent)
+            .map(Optional::get)
+            .collect(Collectors.toSet());
+        BUSINESS_LOGS.info(
+            "{} contingency scenario(s) to regulate: {}",
+            contingencies.size(),
+            String.join(", ", contingencies.stream().map(contingency -> contingency.getName().orElse(contingency.getId())).sorted().toList()));
+        BUSINESS_LOGS.info(
+            "{} PST(s) to regulate: {}",
+            rangeActionsToRegulate.size(),
+            String.join(", ", rangeActionsToRegulate.stream().map(PstRangeAction::getName).sorted().toList()));
 
         // update loadflow parameters
         LoadFlowParameters loadFlowParameters = getLoadFlowParameters(raoParameters);
@@ -98,9 +112,11 @@ public final class PstRegulation {
 
         // regulate PSTs for each curative scenario in parallel
         try (AbstractNetworkPool networkPool = AbstractNetworkPool.create(network, network.getVariantManager().getWorkingVariantId(), getNumberOfThreads(crac, raoParameters), true)) {
-            List<ForkJoinTask<PstRegulationResult>> tasks = statesToRegulate.stream().map(pstRegulationInput ->
-                networkPool.submit(() -> regulatePstsForContingencyScenario(pstRegulationInput, crac, rangeActionsToRegulate, raoResult, loadFlowParameters, networkPool))
-            ).toList();
+            List<ForkJoinTask<PstRegulationResult>> tasks = statesToRegulate.stream()
+                .map(pstRegulationInput -> networkPool.submit(
+                    () -> regulatePstsForContingencyScenario(pstRegulationInput, crac, rangeActionsToRegulate, raoResult, loadFlowParameters, networkPool)
+                ))
+                .toList();
             Set<PstRegulationResult> pstRegulationResults = new HashSet<>();
             for (ForkJoinTask<PstRegulationResult> task : tasks) {
                 try {
@@ -123,7 +139,9 @@ public final class PstRegulation {
     private static Unit getFlowUnit(RaoParameters raoParameters) {
         OpenRaoSearchTreeParameters searchTreeParameters = raoParameters.getExtension(OpenRaoSearchTreeParameters.class);
         if (searchTreeParameters != null) {
-            return searchTreeParameters.getLoadFlowAndSensitivityParameters().getSensitivityWithLoadFlowParameters().getLoadFlowParameters().isDc() ? Unit.MEGAWATT : Unit.AMPERE;
+            return searchTreeParameters.getLoadFlowAndSensitivityParameters().getSensitivityWithLoadFlowParameters().getLoadFlowParameters().isDc()
+                ? Unit.MEGAWATT
+                : Unit.AMPERE;
         }
         return Unit.AMPERE;
     }
@@ -136,10 +154,15 @@ public final class PstRegulation {
      * </ol>
      * For all such states, the associated PST regulation input is included in a set that is returned.
      */
-    private static Set<PstRegulationInput> getStatesToRegulate(Crac crac, RaoResult raoResult, Unit unit, Set<PstRangeAction> rangeActionsToRegulate, Map<String, String> linesInSeriesWithPst, Network network) {
+    private static Set<PstRegulationInput> getStatesToRegulate(Crac crac,
+                                                               RaoResult raoResult,
+                                                               Unit unit,
+                                                               Set<PstRangeAction> rangeActionsToRegulate,
+                                                               Map<String, String> linesInSeriesWithPst,
+                                                               Network network) {
         Instant lastInstant = crac.getLastInstant();
-        return lastInstant.isCurative() ?
-            crac.getStates(lastInstant).stream()
+        return lastInstant.isCurative()
+            ? crac.getStates(lastInstant).stream()
                 .filter(state -> raoResult.getComputationStatus(state) != ComputationStatus.FAILURE)
                 .map(curativeState -> getPstRegulationInput(curativeState, crac, raoResult, unit, rangeActionsToRegulate, linesInSeriesWithPst, network))
                 .filter(Optional::isPresent)
@@ -148,8 +171,16 @@ public final class PstRegulation {
             : Set.of();
     }
 
-    private static Optional<PstRegulationInput> getPstRegulationInput(State curativeState, Crac crac, RaoResult raoResult, Unit unit, Set<PstRangeAction> rangeActionsToRegulate, Map<String, String> linesInSeriesWithPst, Network network) {
-        Optional<FlowCnec> limitingElement = getMostLimitingElementProtectedByPst(curativeState, crac, raoResult, unit, new HashSet<>(linesInSeriesWithPst.values()));
+    private static Optional<PstRegulationInput> getPstRegulationInput(State curativeState,
+                                                                      Crac crac,
+                                                                      RaoResult raoResult,
+                                                                      Unit unit,
+                                                                      Set<PstRangeAction> rangeActionsToRegulate,
+                                                                      Map<String, String> linesInSeriesWithPst,
+                                                                      Network network) {
+        Optional<FlowCnec> limitingElement = getMostLimitingElementProtectedByPst(
+            curativeState, crac, raoResult, unit, new HashSet<>(linesInSeriesWithPst.values())
+        );
         if (limitingElement.isPresent()) {
             Set<ElementaryPstRegulationInput> elementaryPstRegulationInputs = rangeActionsToRegulate.stream()
                 .filter(pstRangeAction -> linesInSeriesWithPst.containsKey(pstRangeAction.getNetworkElement().getId()))
@@ -164,24 +195,37 @@ public final class PstRegulation {
      * If the most limiting element of a curative state is overloaded and is in series with a PST, it is returned.
      * If not, an empty optional value is returned instead.
      */
-    private static Optional<FlowCnec> getMostLimitingElementProtectedByPst(State curativeState, Crac crac, RaoResult raoResult, Unit unit, Set<String> linesInSeriesWithPst) {
-        Map<FlowCnec, Double> marginPerCnec = crac.getFlowCnecs(curativeState).stream().collect(Collectors.toMap(Function.identity(), flowCnec -> raoResult.getMargin(curativeState.getInstant(), flowCnec, unit)));
+    private static Optional<FlowCnec> getMostLimitingElementProtectedByPst(State curativeState,
+                                                                           Crac crac,
+                                                                           RaoResult raoResult,
+                                                                           Unit unit,
+                                                                           Set<String> linesInSeriesWithPst) {
+        Map<FlowCnec, Double> marginPerCnec = crac.getFlowCnecs(curativeState).stream()
+            .collect(Collectors.toMap(
+                Function.identity(),
+                flowCnec -> raoResult.getMargin(curativeState.getInstant(), flowCnec, unit)
+            ));
         List<Map.Entry<FlowCnec, Double>> sortedNegativeMargins = marginPerCnec.entrySet().stream()
             .filter(entry -> entry.getValue() < 0)
-            .sorted(Map.Entry.comparingByValue()).toList();
+            .sorted(Map.Entry.comparingByValue())
+            .toList();
         if (sortedNegativeMargins.isEmpty()) {
             return Optional.empty();
         }
-        double minMargin = sortedNegativeMargins.get(0).getValue();
+        double minMargin = sortedNegativeMargins.getFirst().getValue();
         Set<FlowCnec> limitingElements = new HashSet<>();
-        sortedNegativeMargins.stream().filter(entry -> entry.getValue() == minMargin).forEach(entry -> limitingElements.add(entry.getKey()));
+        sortedNegativeMargins.stream()
+            .filter(entry -> entry.getValue() == minMargin)
+            .forEach(entry -> limitingElements.add(entry.getKey()));
         return limitingElements.stream()
             .filter(flowCnec -> linesInSeriesWithPst.contains(flowCnec.getNetworkElement().getId()))
             .min(Comparator.comparing(Identifiable::getId));
     }
 
     private static LoadFlowParameters getLoadFlowParameters(RaoParameters raoParameters) {
-        return raoParameters.hasExtension(OpenRaoSearchTreeParameters.class) ? raoParameters.getExtension(OpenRaoSearchTreeParameters.class).getLoadFlowAndSensitivityParameters().getSensitivityWithLoadFlowParameters().getLoadFlowParameters() : new LoadFlowParameters();
+        return raoParameters.hasExtension(OpenRaoSearchTreeParameters.class)
+            ? raoParameters.getExtension(OpenRaoSearchTreeParameters.class).getLoadFlowAndSensitivityParameters().getSensitivityWithLoadFlowParameters().getLoadFlowParameters()
+            : new LoadFlowParameters();
     }
 
     private static void updateLoadFlowParametersForPstRegulation(LoadFlowParameters loadFlowParameters) {
@@ -194,8 +238,12 @@ public final class PstRegulation {
 
     private static void applyOptimalRemedialActionsForState(Network networkClone, RaoResult raoResult, State state) {
         // network actions need to be applied BEFORE range actions because to apply HVDC range actions we need to apply AC emulation deactivation network actions beforehand
-        raoResult.getActivatedNetworkActionsDuringState(state).forEach(networkAction -> networkAction.apply(networkClone));
-        raoResult.getActivatedRangeActionsDuringState(state).forEach(rangeAction -> rangeAction.apply(networkClone, raoResult.getOptimizedSetPointOnState(state, rangeAction)));
+        raoResult.getActivatedNetworkActionsDuringState(state)
+            .forEach(networkAction -> networkAction.apply(networkClone));
+        raoResult.getActivatedRangeActionsDuringState(state)
+            .forEach(rangeAction -> rangeAction.apply(
+                networkClone, raoResult.getOptimizedSetPointOnState(state, rangeAction)
+            ));
     }
 
     private static Set<PstRangeAction> getPstRangeActionsForRegulation(Set<String> pstsToRegulate, Crac crac) {
@@ -226,7 +274,12 @@ public final class PstRegulation {
     /**
      * Performs PST regulation for a curative state. The taps are changed during the loadflow iterations.
      */
-    private static PstRegulationResult regulatePstsForContingencyScenario(PstRegulationInput pstRegulationInput, Crac crac, Set<PstRangeAction> rangeActionsToRegulate, RaoResult raoResult, LoadFlowParameters loadFlowParameters, AbstractNetworkPool networkPool) throws InterruptedException {
+    private static PstRegulationResult regulatePstsForContingencyScenario(PstRegulationInput pstRegulationInput,
+                                                                          Crac crac,
+                                                                          Set<PstRangeAction> rangeActionsToRegulate,
+                                                                          RaoResult raoResult,
+                                                                          LoadFlowParameters loadFlowParameters,
+                                                                          AbstractNetworkPool networkPool) throws InterruptedException {
         Network networkClone = networkPool.getAvailableNetwork();
         Contingency contingency = pstRegulationInput.curativeState().getContingency().orElseThrow();
         simulateContingencyAndApplyCurativeActions(contingency, networkClone, crac, raoResult);
@@ -237,7 +290,10 @@ public final class PstRegulation {
         return new PstRegulationResult(contingency, regulatedTapPerPst);
     }
 
-    private static void simulateContingencyAndApplyCurativeActions(Contingency contingency, Network networkClone, Crac crac, RaoResult raoResult) {
+    private static void simulateContingencyAndApplyCurativeActions(Contingency contingency,
+                                                                   Network networkClone,
+                                                                   Crac crac,
+                                                                   RaoResult raoResult) {
         // simulate contingency
         contingency.toModification().apply(networkClone);
 
@@ -247,15 +303,22 @@ public final class PstRegulation {
             .forEach(state -> applyOptimalRemedialActionsForState(networkClone, raoResult, state));
     }
 
-    private static Map<PstRangeAction, Integer> getInitialTapPerPst(Set<PstRangeAction> rangeActionsToRegulate, Network networkClone) {
-        return rangeActionsToRegulate.stream().collect(Collectors.toMap(Function.identity(), pstRangeAction -> networkClone.getTwoWindingsTransformer(pstRangeAction.getNetworkElement().getId()).getPhaseTapChanger().getTapPosition()));
+    private static Map<PstRangeAction, Integer> getInitialTapPerPst(Set<PstRangeAction> rangeActionsToRegulate,
+                                                                    Network networkClone) {
+        return rangeActionsToRegulate.stream()
+            .collect(Collectors.toMap(
+                Function.identity(),
+                pstRangeAction -> networkClone.getTwoWindingsTransformer(pstRangeAction.getNetworkElement().getId()).getPhaseTapChanger().getTapPosition()
+            ));
     }
 
     private static void logPstRegulationResultsForContingencyScenario(Contingency contingency,
                                                                       Map<PstRangeAction, Integer> initialTapPerPst,
                                                                       Map<PstRangeAction, Integer> regulatedTapPerPst,
                                                                       FlowCnec mostLimitingElement) {
-        List<PstRangeAction> sortedPstRangeActions = initialTapPerPst.keySet().stream().sorted(Comparator.comparing(PstRangeAction::getId)).toList();
+        List<PstRangeAction> sortedPstRangeActions = initialTapPerPst.keySet().stream()
+            .sorted(Comparator.comparing(PstRangeAction::getId))
+            .toList();
         List<String> shiftDetails = new ArrayList<>();
         sortedPstRangeActions.forEach(
             pstRangeAction -> {
@@ -272,14 +335,23 @@ public final class PstRegulation {
         }
     }
 
-    private static RaoResult mergePstRegulationResultsWithRaoResult(Set<PstRegulationResult> pstRegulationResults, RaoResult raoResult, Network network, Crac crac, RaoParameters raoParameters) {
-        Map<State, PstRegulationResult> resultsPerState = pstRegulationResults.stream().collect(Collectors.toMap(
-            pstRegulationResult -> crac.getState(pstRegulationResult.contingency(), crac.getLastInstant()),
-            Function.identity()
+    private static RaoResult mergePstRegulationResultsWithRaoResult(Set<PstRegulationResult> pstRegulationResults,
+                                                                    RaoResult raoResult,
+                                                                    Network network,
+                                                                    Crac crac,
+                                                                    RaoParameters raoParameters) {
+        Map<State, PstRegulationResult> resultsPerState = pstRegulationResults.stream()
+            .collect(Collectors.toMap(
+                pstRegulationResult -> crac.getState(pstRegulationResult.contingency(), crac.getLastInstant()),
+                Function.identity()
         ));
 
-        ToolProvider toolProvider = ToolProvider.buildFromRaoInputAndParameters(RaoInput.build(network, crac).build(), raoParameters);
-        PrePerimeterSensitivityAnalysis prePerimeterSensitivityAnalysis = new PrePerimeterSensitivityAnalysis(crac, crac.getFlowCnecs(), crac.getRangeActions(), raoParameters, toolProvider, true);
+        ToolProvider toolProvider = ToolProvider.buildFromRaoInputAndParameters(
+            RaoInput.build(network, crac).build(), raoParameters
+        );
+        PrePerimeterSensitivityAnalysis prePerimeterSensitivityAnalysis = new PrePerimeterSensitivityAnalysis(
+            crac, crac.getFlowCnecs(), crac.getRangeActions(), raoParameters, toolProvider, true
+        );
         PrePerimeterResult initialFlowResult = prePerimeterSensitivityAnalysis.runInitialSensitivityAnalysis(network);
 
         // create a new network variant from initial variant for performing the results merging
@@ -291,18 +363,28 @@ public final class PstRegulation {
         // apply PRAs
         State preventiveState = crac.getPreventiveState();
         applyOptimalRemedialActionsForState(network, raoResult, preventiveState);
-        PrePerimeterResult postPraResult = prePerimeterSensitivityAnalysis.runBasedOnInitialResults(network, initialFlowResult, Set.of(), new AppliedRemedialActions());
+        PrePerimeterResult postPraResult = prePerimeterSensitivityAnalysis.runBasedOnInitialResults(
+            network, initialFlowResult, Set.of(), new AppliedRemedialActions()
+        );
 
         OptimizationResult preventiveResult = new OptimizationResultImpl(
             postPraResult, postPraResult, postPraResult,
-            new NetworkActionsResultImpl(Map.of(preventiveState, raoResult.getActivatedNetworkActionsDuringState(preventiveState))),
-            new RangeActionActivationResultImpl(new RangeActionSetpointResultImpl(raoResult.getOptimizedSetPointsOnState(preventiveState)))
+            new NetworkActionsResultImpl(Map.of(
+                preventiveState, raoResult.getActivatedNetworkActionsDuringState(preventiveState)
+            )),
+            new RangeActionActivationResultImpl(
+                new RangeActionSetpointResultImpl(raoResult.getOptimizedSetPointsOnState(preventiveState))
+            )
         );
-        PostPerimeterResult postPreventivePerimeterResult = new PostPerimeterSensitivityAnalysis(crac, crac.getFlowCnecs(), crac.getRangeActions(), raoParameters, toolProvider, true).runBasedOnInitialPreviousAndOptimizationResults(network, initialFlowResult, postPraResult, Set.of(), preventiveResult, new AppliedRemedialActions());
+        PostPerimeterResult postPreventivePerimeterResult =
+            new PostPerimeterSensitivityAnalysis(crac, crac.getFlowCnecs(), crac.getRangeActions(), raoParameters, toolProvider, true)
+                .runBasedOnInitialPreviousAndOptimizationResults(network, initialFlowResult, postPraResult, Set.of(), preventiveResult, new AppliedRemedialActions());
 
         Map<State, PostPerimeterResult> postRegulationPostContingencyResults = new HashMap<>();
 
-        List<Instant> postOutageInstants = crac.getSortedInstants().stream().filter(instant -> instant.isAuto() || instant.isCurative()).toList();
+        List<Instant> postOutageInstants = crac.getSortedInstants().stream()
+            .filter(instant -> instant.isAuto() || instant.isCurative())
+            .toList();
 
         for (Contingency contingency : crac.getContingencies()) {
             AppliedRemedialActions appliedRemedialActions = new AppliedRemedialActions();
@@ -320,13 +402,22 @@ public final class PstRegulation {
 
                     if (resultsPerState.containsKey(state)) {
                         PstRegulationResult pstRegulationResult = resultsPerState.get(state);
-                        pstRegulationResult.regulatedTapPerPst().forEach((pstRangeAction, regulatedTap) -> appliedRemedialActions.addAppliedRangeAction(state, pstRangeAction, pstRangeAction.convertTapToAngle(regulatedTap)));
+                        pstRegulationResult.regulatedTapPerPst().forEach(
+                            (pstRangeAction, regulatedTap) ->
+                                appliedRemedialActions.addAppliedRangeAction(state, pstRangeAction, pstRangeAction.convertTapToAngle(regulatedTap))
+                        );
                     }
 
-                    appliedRemedialActions.getAppliedNetworkActions(state).forEach(networkAction -> networkAction.apply(network));
-                    appliedRemedialActions.getAppliedRangeActions(state).forEach((rangeAction, setPoint) -> rangeAction.apply(network, setPoint));
+                    appliedRemedialActions.getAppliedNetworkActions(state).forEach(
+                        networkAction -> networkAction.apply(network)
+                    );
+                    appliedRemedialActions.getAppliedRangeActions(state).forEach(
+                        (rangeAction, setPoint) -> rangeAction.apply(network, setPoint)
+                    );
 
-                    PrePerimeterResult postInstantPerimeterResult = prePerimeterSensitivityAnalysis.runBasedOnInitialResults(network, initialFlowResult, Collections.emptySet(), new AppliedRemedialActions());
+                    PrePerimeterResult postInstantPerimeterResult = prePerimeterSensitivityAnalysis.runBasedOnInitialResults(
+                        network, initialFlowResult, Collections.emptySet(), new AppliedRemedialActions()
+                    );
 
                     OptimizationResult newOptimizationResult = new OptimizationResultImpl(
                         postInstantPerimeterResult,
@@ -335,7 +426,9 @@ public final class PstRegulation {
                         new NetworkActionsResultImpl(Map.of(state, raoResult.getActivatedNetworkActionsDuringState(state))),
                         new RangeActionActivationResultImpl(postInstantPerimeterResult)
                     );
-                    PostPerimeterResult postPerimeterStateResult = new PostPerimeterSensitivityAnalysis(crac, crac.getFlowCnecs(), crac.getRangeActions(), raoParameters, toolProvider, true).runBasedOnInitialPreviousAndOptimizationResults(network, initialFlowResult, prePerimeterResult, Set.of(), newOptimizationResult, new AppliedRemedialActions());
+                    PostPerimeterResult postPerimeterStateResult =
+                        new PostPerimeterSensitivityAnalysis(crac, crac.getFlowCnecs(), crac.getRangeActions(), raoParameters, toolProvider, true)
+                            .runBasedOnInitialPreviousAndOptimizationResults(network, initialFlowResult, prePerimeterResult, Set.of(), newOptimizationResult, new AppliedRemedialActions());
                     postRegulationPostContingencyResults.put(state, postPerimeterStateResult);
 
                     prePerimeterResult = postInstantPerimeterResult;
@@ -344,6 +437,12 @@ public final class PstRegulation {
         }
 
         StateTree stateTree = new StateTree(crac);
-        return new PreventiveAndCurativesRaoResultImpl(stateTree, initialFlowResult, postPreventivePerimeterResult, postRegulationPostContingencyResults, crac, raoParameters);
+        return new PreventiveAndCurativesRaoResultImpl(
+            stateTree,
+            initialFlowResult,
+            postPreventivePerimeterResult,
+            postRegulationPostContingencyResults,
+            crac,
+            raoParameters);
     }
 }
